--- a/bin/application/window.fxml
+++ b/bin/application/window.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -28,8 +29,8 @@
         </HBox>
         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
           <children>
-            <Label text="3" />
-            <Button fx:id="buton3" mnemonicParsing="false" text="Algorithm 3" />
+            <Label text="Custom Operation" />
+            <Button fx:id="buton3" mnemonicParsing="false" onAction="#performOfButton3" text="Algorithm 3" />
           </children>
         </HBox>
         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
@@ -38,6 +39,12 @@
         </HBox>
       </children>
     </VBox>
-    <BorderPane fx:id="m" prefHeight="400.0" prefWidth="408.0" />
+    <BorderPane fx:id="m" prefHeight="400.0" prefWidth="408.0">
+         <right>
+            <ScrollBar orientation="VERTICAL" BorderPane.alignment="CENTER" />
+         </right>
+         <bottom>
+            <ScrollBar BorderPane.alignment="CENTER" />
+         </bottom></BorderPane>
   </children>
 </HBox>
