--- a/src/application/window.fxml
+++ b/src/application/window.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -39,12 +39,10 @@
         </HBox>
       </children>
     </VBox>
-    <BorderPane fx:id="m" prefHeight="400.0" prefWidth="408.0">
-         <right>
-            <ScrollBar orientation="VERTICAL" BorderPane.alignment="CENTER" />
-         </right>
-         <bottom>
-            <ScrollBar BorderPane.alignment="CENTER" />
-         </bottom></BorderPane>
+      <ScrollPane fx:id="scrollPane" prefHeight="400.0" prefWidth="412.0">
+         <content>
+          <BorderPane fx:id="m" prefHeight="400.0" prefWidth="408.0" />
+         </content>
+      </ScrollPane>
   </children>
 </HBox>
